--- a/Edit.css
+++ b/Edit.css
@@ -29,3 +29,58 @@ li a:hover:not(.active) {
 	color: white;
 	background-color: red;
 }
+
+.registration{
+	margin-top: 50px;
+	margin-left: 200px;
+	text-align: center;
+	font-size: 40px;
+	font-family:monospace;
+	float: left;
+	background-color:wheat;
+	width: 500px;
+	height: 500px;
+}
+
+#input1{
+	margin-top: 20px;
+	border: 1px solid #333333; border-radius: 10px;
+	width: 350px; height: 50px;
+	font-size: 50px;
+}
+
+#input2{
+	margin-top: 20px;
+	border: 1px solid #333333; border-radius: 10px;
+	width: 350px; height: 50px;
+	font-size: 50px;
+}
+
+#btn1{
+	width: 100px;
+	font-size: 30px;
+}
+
+.delete{
+	margin-top: 50px;
+	margin-left: 50px; 
+	text-align: center;
+	font-size: 40px;
+	font-family:monospace;
+	float: left;
+	background-color:skyblue;
+	width: 500px;
+	height: 500px;
+}
+
+#delete{
+	margin-top: 20px;
+	border: 1px solid #333333; border-radius: 10px;
+	width: 350px; height: 50px;
+	font-size: 50px;
+}
+
+#btn2{
+	width: 100px;
+	font-size: 30px;
+}
